--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@types/react-csv": "^1.1.10",
     "axios": "^1.6.7",
+    "json-2-csv": "^5.5.0",
     "next": "14.1.3",
+    "prop-types": "^15.8.1",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-dom": "^18"
   },
   "devDependencies": {
